======================= libgnome 2.20.0 ========================

2007-08-30  Christian Persch  <chpe@gnome.org>

	* configure.in: We don't need a macros dir.

2007-08-28  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/gnome-program.c: (split_file_list), (get_module_path),
	(find_module), (gnome_program_module_load): Fix module loading. Bug
	#410549, patch by Mariano Suárez-Alvarez.

2007-08-27  Lucas Rocha  <lucasr@gnome.org>

	Define new default wallpaper for desktop. 
	Patch from Vincent Untz <vuntz@gnome.org>

	* gnome-data/Makefile.am, gnome-data/gnome-default.xml.in.in:
	new wallpaper definition file.
	* schemas/Makefile.am, schemas/desktop_gnome_background.schemas.in.in:
	new default background settings.
	* schemas/desktop_gnome_background.schemas.in: removed.

2007-08-22  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/libgnome-2.0-uninstalled.pc.in:
	* libgnome/libgnome-2.0.pc.in: Only depend on esd when esd support is
	compiled in. Bug #460199, patch by Daniel Gryniewicz.

======================= libgnome 2.19.0 ========================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* doc/reference/tmpl/gnome-program.sgml:
	* libgnome/Makefile.am: Build fixes.

2007-07-30  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-init.c: (libgnome_post_args_parse):
	* libgnome/gnome-sound.c: (use_sound), (close_sound_connection),
	(_gnome_sound_set_enabled), (gnome_sound_init),
	(gnome_sound_shutdown): Don't init the esd connection when
	--disable-sound is passed. Bug #449249.

2007-06-19  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-init.c: (libgnome_post_args_parse),
	(libgnome_module_get_goption_group), (libgnome_module_info_get):
	Simplify by using g_object_get instead of g_object_get_property.
	No need to make the GOptionEntry data static.

2007-06-19  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_locate_file),