@@ -1,3 +1,8 @@
+2007-09-19  Christian Persch  <chpe@gnome.org>
+
+	* schemas/Makefile.am: Don't distribute built schema files. Bug
+	#478299. Fix "make clean" not to remove files generated by configure.
+
 ======================= libgnome 2.20.0 ========================
 
 2007-08-30  Christian Persch  <chpe@gnome.org>
